# TravelFolio

./: .gitignore  aufgaben.md  desktop.py  dokumentation.md  flightstest.py  inspect_library.py  main.py  pyproject.toml  readme.md
altercode/: travelfolio.html
firebase-key/: readme.md
static/: app.js  readme.md
templates/: travelfolio.html  travelfolio_desktop.html
