[project]
name = "travelfolio"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "airportsdata>=20250909",
    "fast-flights>=2.2",
    "firebase>=4.0.1",
    "firebase-admin>=7.1.0",
    "flask>=3.1.2",
    "playwright>=1.57.0",
    "pyinstaller>=6.18.0",
    "pyside6>=6.10.1",
]
